src/pages/ProductDetails/CourseDetails/style.module.scss
@import '../../../styles/variables.scss';

.contentIcon {
  color: var(--passion-profile-dark-color, #{map-get($colors, 'DodgerBlue')});
}

.longDescriptionTitle {
  color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Cobalt')}) !important;

  @media screen and (max-width: 769px) {
    font-size: 32px !important;
  }

  @media screen and (max-width: 526px) {
    font-size: 24px !important;
  }
}

.longContentWrapper {
  color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;

}
.longContentWrapper * {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
    background-color: transparent !important;
    color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
}

.paddedContent {
  padding: 0 180px !important;

  @media screen and (max-width: 1025px) {
    padding: 0 100px !important;
  }

  @media screen and (max-width: 769px) {
    padding: 0 20px !important;
  }

  @media screen and (max-width: 525px) {
    padding: 0 12px !important;
  }
}

.newCourseDetails {
  .courseImageContainer {
    position: relative;

    .courseCoverImage {
      object-fit: cover;
      min-height: 320px;
    }

    .courseBuyContainer {
      position: absolute;
      top: 0;
      left: 0;
      background-color: rgba(0, 0, 0, 0.4);
      width: 100%;
      height: 100%;
      text-align: center;

      .courseBuyDetails {
        margin: 120px auto 0;
        color: map-get($colors, 'White');

        @media screen and (max-width: 1024px) {
          margin: 80px auto 0;
        }

        @media screen and (max-width: 769px) {
          margin: 40px auto 0;
        }

        @media screen and (max-width: 526px) {
          margin: 20px auto 0;
        }

        .courseBuyBtn {
          background-color: var(--passion-profile-primary-color, #{map-get($colors, 'DodgerBlue')});
          border-color: var(--passion-profile-primary-color, #{map-get($colors, 'DodgerBlue')});

          &.lightText {
            color : map-get($colors, 'White');
          }

          &.darkText {
            color : map-get($colors, 'Zeus');
          }

          &.disabled {
            opacity: 0.6;
          }
        }

        .courseName {
          font-size: 48px;
          line-height: 52px;
          font-weight: 600;
          color: map-get($colors, 'White');

          @media screen and (max-width: 769px) {
            font-size: 32px;
          }

          @media screen and (max-width: 526px) {
            font-size: 24px;
          }
        }

        .courseDesc {
          max-width: 1000px;
          padding: 0 20px 20px;
          font-size: 18px;

          @media screen and (max-width: 1025px) {
            font-size: 16px;
          }

          @media screen and (max-width: 769px) {
            font-size: 14px;
          }

          @media screen and (max-width: 526px) {
            font-size: 12px;
          }
        }

        .courseDesc * {
          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
              sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
            background-color: transparent !important;
            color: map-get($colors, 'White') !important;
        }
      }
    }
  }

  .courseInfoContainer {
    margin: -70px auto 20px;
    border-radius: 12px;
    background-color: var(--passion-profile-lightest-color, #{map-get($map: $colors, $key: 'White')});
    border: 1px solid var(--passion-profile-light-color, #{map-get($map: $colors, $key: 'White1')});
    padding: 30px;
    box-shadow: 0px 4px 44px rgba(0, 0, 0, 0.08);

    @media screen and (max-width: 1140px) {
      margin: -10px auto 20px;
    }

    @media screen and (max-width: 769px) {
      padding: 8px;
    }

    .courseInfoItem {
      min-width: 240px;
      padding: 0 30px;

      @media screen and (max-width: 1140px) {
        min-width: 200px;
        padding: 0 12px;
      }

      @media screen and (max-width: 1025px) {
        min-width: 180px;
        padding: 0 12px;
      }

      @media screen and (max-width: 769px) {
        min-width: 120px;
        padding: 8px;
      }

      @media screen and (max-width: 605px) {
        min-width: 200px;
      }

      @media screen and (max-width: 432px) {
        min-width: 0px;
      }

      .courseInfoContent {
        font-size: 32px;
        text-align: center;
        display: block;
        font-weight: 700;
        color : var(--passion-profile-darker-color, #{map-get($colors, 'Black')});

        @media screen and (max-width: 1140px) {
          font-size: 24px;
        }
      }

      .courseTitleContainer {
        justify-content: center;
        width: 100%;

        .courseInfoIcon {
          font-size: 20px;
          line-height: 28px;
          margin-right: 8px;
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'DodgerBlue')});

          @media screen and (max-width: 769px) {
            font-size: 16px;
            line-height: 20px;
          }
        }

        .courseInfoTitle {
          font-size: 14px;
          vertical-align: super;
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')});
        }
      }
    }
  }

  .personaContainer {
    .personaItemWrapper {
      padding: 10px 12px;
      border: 1px solid var(--passion-profile-dark-color, #{map-get($map: $colors, $key: 'Silver')});
      border-radius: 8px;
      min-height: 200px;
      height: 100%;

      .personaItem {
        width: 100%;

        .personaItemTitle {
          text-align: center;
          font-size: 20px;
          font-weight: 600;
  color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;

        }

        .personaItemContent {
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
        }

        .personaItemContent * {
          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
              sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
            background-color: map-get($map: $colors, $key: 'White') !important;
            color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
        }
      }
    }
  }

  .courseCurriculumSection {
    @extend .paddedContent;

    background-color: map-get($map: $colors, $key: 'WhiteSmoke1');

    .courseCurriculumContainer {
      margin: 50px 0;

      .courseCurriculumText {
        font-size: 32px;
        color: var(--passion-profile-dark-color, #{map-get($map: $colors, $key: 'Denim')});
        text-align: center;
      }

      .courseModules {
        width: 100%;
        padding: 4px 12px 12px;
        border-radius: 12px;
        background-color: var(--passion-profile-lightest-color, #{map-get($map: $colors, $key: 'White')});
        box-shadow: 0px 4px 44px rgba(0, 0, 0, 0.08);

        .curriculumExpandIcon {
          color: var(--passion-profile-dark-color, #{map-get($map: $colors, $key: 'Denim')}) !important;
          font-size: 16px !important;
        }

        .moduleHeader {
          font-size: 18px;
          font-weight: 600;
          line-height: 24px;
          color: var(--passion-profile-dark-color, #{map-get($map: $colors, $key: 'Denim')}) !important;
        }

        .moduleContentItems {
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
          
          .moduleContentName {
            font-weight: 500;
            color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
          }
        }

        :global {
          .ant-collapse-header {
            margin-top: 12px;
            background-color: var(--passion-profile-light-color, #{map-get($map: $colors, $key: 'Lavender')});
            border-radius: 8px !important;
          }
        }
      }
    }
  }

  .creatorProfileImage {
    width: 100%;
    object-fit: cover;

    // Based on Ant Design's sm breakpoint
    @media screen and (max-width: 577px) {
      object-fit: scale-down;
      max-width: 320px;
      margin: 0 auto;
    }
  }

  .coursePreviewImagesSection {
    margin: -50px 0;
    padding: 30px 80px !important;
    background: linear-gradient(41.18deg, var(--passion-profile-lightest-color, #e6f7ff) 16.22%, var(--passion-profile-light-color, #fff5f6) 82.56%);

    @media screen and (max-width: 769px) {
      padding: 20px !important;
    }

    @media screen and (max-width: 525px) {
      padding: 50px 12px 12px !important;
    }

    .coursePreviewTitle {
      color: var(--passion-profile-dark-color, #{map-get($colors, 'Cobalt')}) !important;
      font-size: 28px;
      font-weight: 500;
      text-align: center;
    }

    .carouselDots {
      > li {
        background-color: rgba(0, 108, 208, 0.2);
      }

      :global {
        .slick-active {
          > button {
            background: var(--passion-profile-primary-color, #006cd0) !important;
          }
        }
      }
    }

    .coursePreviewImagesContainer {
      width: 100%;

      .carouselItem {
        padding-bottom: 50px;

        .coursePreviewImage {
          width: 100%;
          object-fit: scale-down;
        }
      }
    }
  }

  .courseFAQSection {
    @extend .paddedContent;

    background-color: map-get($map: $colors, $key: 'WhiteSmoke1');

    .courseFAQContainer {
      margin: 50px 0;

      .courseFAQs {
        width: 100%;

        .faqHeader {
          font-size: 18px;
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
        }

        .faqExpandIcon {
          font-size: 16px;
          top: 20%;
          right: 32px;
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
        }

        :global {
          .ant-collapse-header {
            margin-top: 12px;
            background-color: var(--passion-profile-lightest-color, #{map-get($map: $colors, $key: 'White')});
            border-radius: 8px !important;
            padding: 20px;
          }
        }

        .faqContentWrapper {
          color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
        }
        .faqContentWrapper * {
          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
              sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
            color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Black')}) !important;
            background-color: transparent !important;
        }
      }
    }
  }
}

.coursePreviewContainer {
  width: 100%;
  height: 100%;

  .coursePreviewTitle {
    font-weight: 500;
    font-size: 36px;
    margin-bottom: 12px;
    color: var(--passion-profile-darker-color, #{map-get($map: $colors, $key: 'Smalt')}) !important;

    @media screen and (max-width: 526px) {
      font-size: 24px;
    }
  }

  .courseEmbedContainer {
    width: 100%;
    padding: 0 20px;
    margin: 0 auto;
    text-align: center;
    max-width: 800px;

    @media screen and (max-width: 769px) {
      padding: 0 8px;
    }
  }
}

